--- a/second_page.html
+++ b/second_page.html
@@ -136,7 +136,7 @@ function searchRecommendedTracks(mood, accessToken) {
 }
 
 function createPlaylistAndAddTracks(tracks) {
-    var playlistName = "Current Moode"; // Playlist name
+    var playlistName = "New Playlist";
     var accessToken = sessionStorage.getItem('accessToken');
 
     $.ajax({
@@ -148,7 +148,8 @@ function createPlaylistAndAddTracks(tracks) {
         },
         data: JSON.stringify({
             "name": playlistName,
-            "public": true
+            "public": false, // Change to true if you want it to be public
+            "description": "New playlist description"
         }),
         success: function(playlistResponse) {
             var playlistId = playlistResponse.id;
@@ -178,6 +179,7 @@ function createPlaylistAndAddTracks(tracks) {
         }
     });
 }
+
 
 function displayResults(data) {
     var tracks = data.tracks;
