--- a/second_page.html
+++ b/second_page.html
@@ -123,11 +123,12 @@ function searchRecommendedTracks(mood, accessToken) {
             "Authorization": "Bearer " + accessToken
         },
         success: function(response) {
-            if (response && response.tracks) {
-                createPlaylistAndAddTracks(response.tracks);
-            } else {
-                console.error("Error: Invalid response from Spotify API");
-            }
+           if (response && response.tracks) {
+    createPlaylist(); // Call the function to create playlist
+    // You can add tracks to the playlist here if needed
+} else {
+    console.error("Error: Invalid response from Spotify API");
+}
         },
         error: function(xhr, status, error) {
             console.log(error);
@@ -135,8 +136,7 @@ function searchRecommendedTracks(mood, accessToken) {
     });
 }
 
-function createPlaylistAndAddTracks(tracks) {
-    var playlistName = "New Playlist";
+function createPlaylist() {
     var accessToken = sessionStorage.getItem('accessToken');
 
     // Check if access token is available
@@ -146,48 +146,27 @@ function createPlaylistAndAddTracks(tracks) {
     }
 
     $.ajax({
-        url: "https://api.spotify.com/v1/me/playlists",
+        url: "https://api.spotify.com/v1/users/31f2nfbjmzx5n7o3uimvhp46edli/playlists",
         type: "POST",
         headers: {
             "Authorization": "Bearer " + accessToken,
             "Content-Type": "application/json"
         },
         data: JSON.stringify({
-            "name": playlistName,
-            "public": false, // Change to true if you want it to be public
-            "description": "New playlist description"
+            "name": "Mood Swinger",
+            "description": "Your Current Mood",
+            "public": true
         }),
-        success: function(playlistResponse) {
-            var playlistId = playlistResponse.id;
-            var trackUris = tracks.map(track => "spotify:track:" + track.id);
-
-            // Add tracks to the created playlist
-            $.ajax({
-                url: "https://api.spotify.com/v1/playlists/" + playlistId + "/tracks",
-                type: "POST",
-                headers: {
-                    "Authorization": "Bearer " + accessToken,
-                    "Content-Type": "application/json"
-                },
-                data: JSON.stringify({
-                    "uris": trackUris
-                }),
-                success: function(response) {
-                    console.log("Playlist created and tracks added successfully!");
-                },
-                error: function(xhr, status, error) {
-                    console.log("Error adding tracks to playlist:", error);
-                }
-            });
+        success: function(response) {
+            console.log("Playlist created successfully:", response);
+            // Once playlist is created, you can add tracks to it if needed
         },
         error: function(xhr, status, error) {
             console.log("Error creating playlist:", error);
         }
     });
 }
-
-
-
+    
 function displayResults(data) {
     var tracks = data.tracks;
     var html = "<h2>Recommended Tracks</h2>";
