--- a/second_page.html
+++ b/second_page.html
@@ -78,7 +78,7 @@ function searchSongs(mood) {
         }
     });
 }
-  
+
 function searchRecommendedTracks(mood, accessToken) {
     // Use Spotify's recommendation API to get recommended tracks based on mood
     var apiUrl = "https://api.spotify.com/v1/recommendations?seed_genres=" + mood + "&limit=5";
@@ -97,6 +97,7 @@ function searchRecommendedTracks(mood, accessToken) {
         success: function(response) {
             if (response && response.tracks) {
                 displayResults(response); // Display the recommended tracks
+                createPlaylist(accessToken, response.tracks); // Create a playlist
             } else {
                 console.error("Error: Invalid response from Spotify API");
             }
@@ -133,6 +134,52 @@ function displayResults(data) {
 
     // Store search results in sessionStorage
     sessionStorage.setItem('searchResults', html);
+}
+
+function createPlaylist(accessToken, tracks) {
+    // Playlist data
+    var playlistData = {
+        "name": "Mood Swinger",
+        "description": "Your Current Mood",
+        "public": true
+    };
+
+    $.ajax({
+        url: "https://api.spotify.com/v1/me/playlists",
+        type: "POST",
+        headers: {
+            "Authorization": "Bearer " + accessToken,
+            "Content-Type": "application/json"
+        },
+        data: JSON.stringify(playlistData),
+        success: function(response) {
+            var playlistId = response.id;
+            addTracksToPlaylist(accessToken, playlistId, tracks);
+        },
+        error: function(xhr, status, error) {
+            console.log(error);
+        }
+    });
+}
+
+function addTracksToPlaylist(accessToken, playlistId, tracks) {
+    var trackUris = tracks.map(track => "spotify:track:" + track.id);
+
+    $.ajax({
+        url: "https://api.spotify.com/v1/playlists/" + playlistId + "/tracks",
+        type: "POST",
+        headers: {
+            "Authorization": "Bearer " + accessToken,
+            "Content-Type": "application/json"
+        },
+        data: JSON.stringify({ "uris": trackUris }),
+        success: function(response) {
+            console.log("Playlist created and tracks added successfully!");
+        },
+        error: function(xhr, status, error) {
+            console.log(error);
+        }
+    });
 }
 
 function saveTrackDetails(trackId, trackName, artistName, releaseYear) {
