--- a/second_page.html
+++ b/second_page.html
@@ -81,7 +81,7 @@ function searchSongs(mood) {
 
 function searchRecommendedTracks(mood, accessToken) {
     // Use Spotify's recommendation API to get recommended tracks based on mood
-    var apiUrl = "https://api.spotify.com/v1/recommendations?seed_genres=" + mood + "&limit=5";
+    var apiUrl = "https://api.spotify.com/v1/recommendations?seed_genres=" + mood + "&limit=7"; // Change limit to 7
 
     if (!accessToken) {
         console.log("Access token not available.");
@@ -108,12 +108,13 @@ function searchRecommendedTracks(mood, accessToken) {
     });
 }
 
+
 function displayResults(data) {
     var tracks = data.tracks;
     var html = "<h2>Recommended Tracks</h2>";
     html += "<div class='tracks'>";
     var count = 0;
-    for (var i = 0; i < tracks.length && count < 5; i++) {
+    for (var i = 0; i < tracks.length && count < 7; i++) { // Ensure count < 7
         var trackName = tracks[i].name;
         var trackId = tracks[i].id;
         var artistName = tracks[i].artists[0].name;
@@ -135,6 +136,7 @@ function displayResults(data) {
     // Store search results in sessionStorage
     sessionStorage.setItem('searchResults', html);
 }
+
 
 function createPlaylist(accessToken, tracks) {
     // Playlist data
